Prevent word overflow on Md and Sm screens

--- a/src/css/_mobile.scss
+++ b/src/css/_mobile.scss
@@ -65,6 +65,12 @@
   .projects {
     grid-template-columns: 1fr 1fr;
   }
+
+  .boxes {
+    div {
+      word-break: break-all;
+    }
+  }
 }
 
 //phones
